# AI-Selected-Topics-W4

./: 01_env_smoke_and_oracle.ipynb  03_grpo_training.ipynb  04_curriculum_rl_plus.ipynb  05_eval_quick.ipynb  05_eval_vllm.ipynb  README_W4.md  pyproject.toml  report_w4.md
artifacts/: README.md
artifacts/eval_results/: baseline_d1.metrics.jsonl  baseline_d1.traj.jsonl  baseline_d2.metrics.jsonl  baseline_d2.traj.jsonl  trained_d1.metrics.jsonl  trained_d1.traj.jsonl  trained_d2.metrics.jsonl  trained_d2.traj.jsonl
artifacts/eval_stage1/: baseline_d1.metrics.jsonl  baseline_d1.traj.jsonl  baseline_d3.metrics.jsonl  baseline_d3.traj.jsonl  trained_d1.metrics.jsonl  trained_d1.traj.jsonl  trained_d3.metrics.jsonl  trained_d3.traj.jsonl
artifacts/smoke/: baseline_eval_d1_chatpath_v4.metrics.jsonl  baseline_eval_d1_chatpath_v4.traj.jsonl  (+30 more)
base/: data.py
configs/: eval_vllm.example.json  train_unsloth.example.json
data/: val.jsonl
requirements/: base-core.txt  eval-vllm.txt  train-unsloth.txt
scripts/: eval_rollouts.py  generate_eval.py  generate_train.py  run_oracle.py  train_grpo.py
tests/: test_action_parser.py  test_artifacts.py  test_env_manual_cases.py  test_eval_vllm_config.py  test_generator.py  test_oracle.py  test_prompting.py  test_trajectory_text.py  test_verifier.py  test_workflows.py
triage/: __init__.py  action_parser.py  artifacts.py  catalogs.py  constants.py  env.py  generator.py  io_utils.py  logging_utils.py  metrics.py  oracle.py  prompting.py  rule_engine.py  schema.py  text_templates.py  trajectory_text.py  verifier.py  workflows.py
(+18 files in other folders)
